prymitywny dynamiczne uzupełnienie

--- a/dictionary/templates/index.html
+++ b/dictionary/templates/index.html
@@ -14,5 +14,7 @@
 			<input type="text" onchange="onChangeHandler()"value="" name="prefix" id="prefix"/>
 			<input type="submit" value="Wprowadź" name="submit" id="submit"/>
 		</form>
+		<ul id="completions">
+		</ul>
 	</body>
 </html>
