--- a/dictionary/templates/index.html
+++ b/dictionary/templates/index.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
-<html>
+{% load static %}
+<html lang='en'>
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<title>Słownik Języka Polskiego</title>
-		{% load static %}
-		<link rel="stylesheet" href="{% static "dictionary/styles.css" %}" type="text/css" charset="utf-8">
+{% comment %} <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> {% endcomment %}
+
+		<link rel="stylesheet" href="{% static "dictionary/styles.css" %}" type="text/css" media="screen" charset="utf-8">
 		<script src="{% static "dictionary/index.js" %}" charset="utf-8"></script>
 	</head>
 	<body>
+		<div class="box">
 		<h3>Słownik Języka Polskiego</h3>
+	</div>	
 		<form action="" method="" accept-charset="utf-8">
-			<input type="text" onchange="onChangeHandler()"value="" name="prefix" id="prefix"/>
+			<input type="text" name="prefix" id="prefix"/>
 			<input type="submit" value="Wprowadź" name="submit" id="submit"/>
 		</form>
 		<ul id="completions">
 		</ul>
+		{% comment %} <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> {% endcomment %}
+		{% comment %} <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> {% endcomment %}
+		{% comment %} <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> {% endcomment %}
 	</body>
 </html>
