--- a/dictionary/templates/index.html
+++ b/dictionary/templates/index.html
@@ -8,7 +8,8 @@
 {% comment %} <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> {% endcomment %}
 
 		<link rel="stylesheet" href="{% static "dictionary/styles.css" %}" type="text/css" media="screen" charset="utf-8">
-		<script src="{% static "dictionary/index.js" %}" charset="utf-8"></script>
+		<link rel="icon" href="{% static "favicon.ico" %}">
+    <script src="{% static "dictionary/index.js" %}" charset="utf-8"></script>
 	</head>
 	<body>
 		<div class="box">
